# camanagement

./: .env.example  .gitignore  .gitlab-ci.yml  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ca-validate-deploy.yml
baseline/: compliance-rules.yaml  conflict-rules.yaml  ms-best-practices.yaml  naming-rules.yaml
docs/: AZURE_SETUP.md  GITHUB_SETUP.md  GITLAB_SETUP.md  USER_GUIDE.md  WORKFLOW_TEST.md
policies/prd/: en-prd-ca-admins-mfa-001.yaml  en-prd-ca-allusers-compliant-device-001.yaml  en-prd-ca-allusers-mfa-002.yaml  en-prd-ca-externals-block-legacy-001.yaml
policies/tst/: en-tst-ca-app-testapp-mfa-001.yaml
src/ca_manager/: __init__.py  __main__.py  cli.py  client.py  models.py
src/ca_manager/validators/: __init__.py  compliance.py  conflicts.py  naming.py
templates/: README.md
templates/admin/: app-specific-control.yaml  block-legacy-auth.yaml  location-restriction.yaml  mfa-enforcement.yaml  require-compliant-device.yaml
templates/jira/: ca-policy-request.md
